--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 .home-img{
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 300px;
+    margin-left: 80px;
 }
 .home-img img{
     width: 100%;
     height: 100%;
     border-radius: 50%;
     box-shadow: 5px 5px 10px rgb(47, 47, 47),-5px -5px 10px rgb(32, 32, 32);
+}
+.testi-author-info img{
+    width: 100px;
+    height: 100px;
 }
